--- a/resume.tex
+++ b/resume.tex
@@ -13,6 +13,10 @@
 \usepackage[hidelinks]{hyperref}
 \fontfamily{SansSerif}
 \usepackage{multirow}
+% \usepackage{fontspec}
+\usepackage{fontawesome}
+% \usepackage[T1]{fontenc}
+
 \selectfont
 
 \usepackage[T1]{fontenc}
@@ -127,16 +131,16 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
 \resheading{\subheadingfont{PROJECTS} }\\[0.1cm]
 
 \noindent
-\projecttopic{WiFi Tomography*}  \hfill \textcolor{projDescColor}{\textit{Python}}  \\
+\projecttopic{WiFi Tomography} \textit{\myfont{9pt}{(Ongoing)}} \hfill \textcolor{projDescColor}{\textit{Python}}  \\
 \projectdesc{Project Under Prof. Ayon Chakraborty} \hfill \mycal{May'23 - Present} 
-\begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
-    \item WiFi tomography is a low-cost technique to image the environment using WiFi signals.
-    \item Working on computational optimisation of Tomographic Reconstruction for outdoor
-    and indoor drone application 
-\end{itemize}
+\begin{itemize}[nolistsep, leftmargin=\myMargin]
+    \item WiFi tomography is a low-cost and easily implementable method to image the environment using WiFi signals.
+    \item Working on computational optimisation of Tomographic Reconstruction to make it suitable for outdoor
+        and indoor drone application 
+\end{itemize} 
 
 \noindent
-\hrulefill
+\
 
 % \noindent
 % \projecttopic{Hack CPU} \mylink{https://github.com/Snehadeep-Gayen/Computer-Organisation-and-Architecture-Lab} \hfill \textit{Verilog} \\
@@ -154,39 +158,41 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
 
 \noindent
 \projecttopic{CPU Design} \mylink{https://github.com/Snehadeep-Gayen/Computer-Organisation-and-Architecture-Lab} 
+\mylink{https://github.com/Snehadeep-Gayen/Simple_CPU_Design} 
 \hfill    \textcolor{projDescColor}{\textit{Verilog}}  \\
 \projectdesc{CS2610 Course Project - Prof. C. Chandra Sekhar} \hfill \mycal{Jan-May '23} \\
 \projectdesc{CS2310 Course Project - Prof. Ayon Chakraborty} \hfill \mycal{Jul-Nov '22}
 \noindent
-\begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
+\begin{itemize}[nolistsep, leftmargin=\myMargin]
     \item Implemented a CPU with register file and ALU with instructions to perform Arithmetic 
     and Logical operations on both 8-bit integers and  12-bit floating-point numbers
     \item Built a combinational 8-bit CPU from gate level
 \end{itemize}
 
 \noindent
-\hrulefill
+\
 
 
 \noindent
-\projecttopic{Reading Project and Presentation} \\
+\projecttopic{Reading Project and Presentation} \mylink{https://docs.google.com/presentation/d/11JGNKZnVHHQ-aGJLIgkdXcnK5qy_xisO/edit?usp=sharing&ouid=111499804735475673896&rtpof=true&sd=true} \\
 \projectdesc{CS6122 Course Project - Prof. B. V. R. Rao} \hfill \mycal{Jan-May '23} 
 \begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
     \item Presented the paper on \href{https://doi.org/10.1007/s00453-012-9643-5}{\textit{``Smoothed Analysis of Partitioning Algorithms for Euclidean Functionals"} 
-    by \textit{Bläser, M., Manthey, B. \& Rao, B.V.R.}} and discussed its applications to problems.
+    by \textit{Bläser, M., Manthey, B. \& Rao, B.V.R.}} and discussed its applications to problems
 \end{itemize}
 
 \noindent
-\hrulefill
+\
 
 
 \noindent
-\projecttopic{Closeness Centrality - CENDY Algorithm} \mylink{https://github.com/Snehadeep-Gayen/CENDY-Incremental-CC}
+\projecttopic{Closeness Centrality Algorithm} \mylink{https://github.com/Snehadeep-Gayen/CENDY-Incremental-CC}
  \hfill \textcolor{projDescColor}{\textit{C++}} \\
 \projectdesc{Project under Prof. Manikandan Narayanan} \hfill \mycal{May-Jun '23}
-\begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
-    \item Studied a research paper on Closeness Centrality and APL in Dynamic Graphs (descr. below) and implemented its algorithm in C++
-    \item C. -C. Yen, M. -Y. Yeh and M. -S. Chen, "An Efficient Approach to Updating Closeness Centrality and Average Path Length in Dynamic Networks" 2013 IEEE 13th Intl. Conf. on Data Mining
+\begin{itemize}[nolistsep, leftmargin=\myMargin]
+    \item Implemented the CENDY algorithm based on this paper \ \mylink{https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6729571&isnumber=6729471}
+    \item This on-line algorithm updates Average Path Length and Closeness Centrality of all nodes
+    in a Dynamic Graph
  \end{itemize}
 
 
@@ -210,22 +216,6 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
 % \item \textbf{Simple CPU \big\vert \   Prof. Ayon Chakraborty} \ \href{https://github.com/Snehadeep-Gayen/Simple_CPU_Design}{\includegraphics[scale=0.03]{download.png}} \hfill {\textit{Verilog} } 
 % \begin{itemize}[noitemsep,nolistsep]
 %     \item Built a combinational 8-bit CPU (from gate level) using HDL (Verilog) as a part of course CS2310
-%  \end{itemize}
-%  \vspace{5pt}
- 
-% \item \textbf{Reading Project \& Presentation \big\vert \   Prof. B. V. R. Rao} \ \href{https://docs.google.com/presentation/d/11JGNKZnVHHQ-aGJLIgkdXcnK5qy_xisO/edit?usp=sharing&ouid=111499804735475673896&rtpof=true&sd=true}{\includegraphics[scale=0.03]{download.png}} \hfill {} 
-% \begin{itemize}[noitemsep,nolistsep]
-%     \item Studied and analysed a research paper (desc. below) on "Smoothed Analysis of Euclidean Partitioning Algorithms" 
-%     \item Presented its key insights and implications as a part of course CS6122
-%     \item \href{https://doi.org/10.1007/s00453-012-9643-5}{Link to the paper}
-%  \end{itemize}
-%  \vspace{5pt}
-
- 
-% \item \textbf{CC - CENDY algorithm \big \vert \  Prof. M. Narayanan} \ \href{https://github.com/Snehadeep-Gayen/CENDY-Incremental-CC}{\includegraphics[scale=0.03]{download.png}} \hfill {\textit{C++} } 
-% \begin{itemize}[noitemsep,nolistsep]
-%     \item Studied a research paper on Closeness Centrality and APL in Dynamic Graphs (descr. below) and implemented its algorithm in C++
-%     \item C. -C. Yen, M. -Y. Yeh and M. -S. Chen, "An Efficient Approach to Updating Closeness Centrality and Average Path Length in Dynamic Networks" 2013 IEEE 13th Intl. Conf. on Data Mining
 %  \end{itemize}
 %  \vspace{5pt}
  
@@ -262,6 +252,8 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
     \item Participated in prestigious \textbf{European Hyperloop Week - Scotland 2023}, 
     among over 25 teams globally to represent the country.
 \end{itemize}
+\noindent
+\ 
 \projecttopic{Tutor \& Contributor, \textcolor{nptel}{NPTEL}} \hfill \mycal{March '23 - Present} 
 \begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
     \item Created \textbf{YouTube tutorials} under NPTEL for previous year GATE CS questions especially for the less privelleged applicants
@@ -279,55 +271,61 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
 \noindent
 \resheading{\subheadingfont{SCHOLASTIC ACHIEVEMENTS}}
 \begin{itemize}[leftmargin=\myMargin]
+\setlength \itemsep{-0.1em}
 \item Secured \textbf{AIR 5} in JEE Mains out of 1 million students  %\hfill {[20XX]}%
 \item Secured \textbf{AIR 161} in JEE Advanced \hfill
 \item Secured \textbf{AIR 10} in Indian Statistical Institute Exam
 \item Secured \textbf{AIR 21} in INChO and attended IChO Camp
 \item Awarded KVPY Fellowship (2021) with \textbf{AIR 338}
-\item Won 1$^{st}$ place in Mimamsa '22 at IISER Pune \\ 4$^{th}$ place in Chemenigma '22 at IISC Bangalore \& \\ Silver Medal in Homi Bhabha Science Competition \\ (conducted in Maharashtra)
+\item Winner of Mimamsa '22 at IISER Pune \\ 4$^{th}$ place in Chemenigma '22 at IISC Bangalore \& \\ Won Silver Medal in Homi Bhabha Science Competition \\ (conducted in Maharashtra)
 \end{itemize} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- 
-\noindent
-\resheading{\subheadingfont{SOFTWARE SKILLS}}
- \begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
-  \item \textbf{Languages}: C++, C, HDL (Verilog), Python, Java, HTML, x86, RISC and 8085 ASM, CSS, R
-  \item \textbf{Tools}: TI CCS, Git, \textbf{\LaTeX}, AutoCAD, GDB
-\item \textbf{Libraries}: TI RTOS, NumPy, PyLops, Matplotlib
-  \end{itemize}
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \noindent
 \resheading{\subheadingfont{CODING ACHIEVEMENTS}}
- \begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
-  \item \textbf{Codeforces} - Max Rating 1678 \textcolor{blue}{Expert}
-  \item \textbf{ICPC}: Mathura Prelims AIR 151
-\item AIR 3 in Shaastra CP Potpourri (Mixed-bag coding \\ contest) \small {\textit{[Shaastra is Asia's largest student-run Techfest]}}  
-    \item \normalsize{Google Farewell Round Global Rank 373} 
-    \item \normalsize{Codeforces Round 881 Global Rank 231} 
-    \item \normalsize{CodeChef Starters 96 (Div. 3) Global Rank 9} 
+ \begin{itemize}[ leftmargin=\myMargin]
+    \setlength \itemsep{-0.1em}
+  \item Maximum Rating 1678 \textcolor{blue}{(Expert)} on Codeforces
+%   \item Maximum Rating 1653 \textcolor{blue}{(3 \includegraphics[scale=0.03]{bluestar.png})} on CodeChef
+  \item \textbf{ICPC 2022} - \textbf{AIR 151} and \textbf{Institute Rank 7} in Kanpur-Mathura Qualifier Round
+\item \textbf{AIR 3} in Shaastra CP Potpourri (Mixed-bag coding contest) \\ \small {\textit{[Shaastra is Asia's largest student-run Techfest]}} 
+    \item \normalsize{ \textbf{Global Rank 9} in CodeChef Starters 96} 
+    \item \normalsize{ \textbf{Global Rank 231} in Codeforces Round 881} 
+    \item \normalsize{ \textbf{Global Rank 373} in Google Farewell Round} 
     \item  \normalsize {1st place in Inter-School Java Competition in Mumbai}
   \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
+
+ 
+\noindent
+\resheading{\subheadingfont{SOFTWARE SKILLS}}
+ \begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.1em}
+  \item \textbf{Languages}: C++, C, HDL (Verilog), Python, Java, HTML, CSS, x86, RISC and 8085 ASM, R
+  \item \textbf{Tools}: TI CCS, Git, \textbf{\LaTeX}, AutoCAD, GDB
+\item \textbf{Libraries}: TI RTOS, NumPy, PyLops, Matplotlib
+  \end{itemize}
+  
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \noindent
 \resheading{\subheadingfont{EXTRACURRICULAR ACTIVITIES}}
-\begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
+\begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.1em}
 \item \textbf{Sports:} Taekwondo Red Dan II Belt, Awarded Best \\ Athlete U14 at School, NSO Athlete at IITM
 \item Mentored freshmen, personally and academically, \\ under \textbf{Saathi, IIT Madras}
 \item Avid book reader and Tabla player
 \end{itemize}
 
 \noindent
-\resheading{\subheadingfont{RELEVANT COURSES}}
+\resheading{\subheadingfont{COURSES \& LABS}}
  % \textbf{Econometrics \big\vert \   Statistics \big\vert \   Mathematical Methods \big\vert \   Microeconomics \big\vert \   Macroeconomics}\hfill {[ISI-D]}\\[-0.1cm]\\
 \begin{multicols}{2} 
 
@@ -338,20 +336,20 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
   % \item {\small Problem Solving using Computers} 
   \item { Basic Electrical Engg} 
   \item { Computer Systems Design} 
-  \item { Programming and \textbf{Data Structures}} 
+  \item {Programming and Data Structures}
   \item { Computer Organisation and Architecture} 
-  \item { Design \& Analysis of \textbf{Algo}} 
+  \item { Design \& Analysis of Algorithms} 
   \item { Theory of Computation} 
   \item { Probabilistic, Smoothed Analysis of Algorithms} 
-  \item { Object Oriented Prog.} 
+  \item { Object Oriented Programming} 
   \item { Discrete Maths} 
-  \item { Basic \textbf{Graph Theory}} 
-  \item { \textbf{Probability, Statistics} \& Stochastic Processes} 
+  \item { Basic Grpah Theory} 
+  \item { Probability, Statistics\& Stochastic Processes} 
   \item { Series and Matrices} 
   \item { Multivariable Calculus} 
   \item { Ordinary Differential Eqns}  
-  \item { Principles of\textbf{ Economics}} 
-  \item { Intro to\textbf{ Game Theory}}   
+  \item { Principles of Economics} 
+  \item { Intro to Game Theory}   
   \item { Compiler Design *} 
   \item { Operating System *}
 \end{itemize}
