--- a/resume.tex
+++ b/resume.tex
@@ -105,24 +105,24 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\setlength{\tabcolsep}{20pt}
-\begin{table}
-\centering
-\noindent
-\resheading{\subheadingfont{EDUCATION}}\\ 
-\vspace{5pt}
-\begin{tabular}{lllll}
-\toprule
-\toprule
-\textbf{Course}  & \textbf{CGPA/\%}  & \textbf{Institution} & \textbf{Year} \\ 
-\toprule
- B. Tech CSE  & \fontsize{11pt}{12pt} \selectfont \textbf{9.90} & Indian Institute of Technology, Madras & 2021-Present  \\ 
-HSC 12$^{th}$ & 98.17  & Pace Junior Science College Andheri, Mumbai & 2019-21  \\ 
-ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\ 
-\bottomrule
-\bottomrule \\[-0.9cm]
-\end{tabular}
-\end{table}
+% \setlength{\tabcolsep}{20pt}
+% \begin{table}
+% \centering
+% \noindent
+% \resheading{\subheadingfont{EDUCATION}}\\ 
+% \vspace{5pt}
+% \begin{tabular}{lllll}
+% \toprule
+% \toprule
+% \textbf{Course}  & \textbf{CGPA/\%}  & \textbf{Institution} & \textbf{Year} \\ 
+% \toprule
+%  B. Tech CSE  & \fontsize{11pt}{12pt} \selectfont \textbf{9.90} & Indian Institute of Technology, Madras & 2021-Present  \\ 
+% HSC 12$^{th}$ & 98.17  & Pace Junior Science College Andheri, Mumbai & 2019-21  \\ 
+% ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\ 
+% \bottomrule
+% \bottomrule \\[-0.9cm]
+% \end{tabular}
+% \end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -138,25 +138,10 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
     \item Working on computational optimisation of Tomographic Reconstruction to make it suitable for outdoor
         and indoor drone application 
 \end{itemize} 
+\vspace{5pt}
 
 \noindent
-\
-
-% \noindent
-% \projecttopic{Hack CPU} \mylink{https://github.com/Snehadeep-Gayen/Computer-Organisation-and-Architecture-Lab} \hfill \textit{Verilog} \\
-% \projectdesc{CS2610 Course Project - Prof. C Chandra Sekhar} \hfill \mycal{Jan'23 - May '23}
-% \begin{itemize}[noitemsep]
-%     \item Implemented a CPU with register file and ALU with instructions to perform Arithmetic and Logical operations on both 8-bit integers and  12-bit floating-point numbers
-% \end{itemize}
-
-% \noindent
-% \projecttopic{Simple CPU} \mylink{https://github.com/Snehadeep-Gayen/Simple_CPU_Design} \hfill \textit{Verilog} \\
-% \projectdesc{CS2310 Course Project - Prof. Ayon Chakraborty} \hfill \mycal{Jul'22 - Nov'22}
-% \begin{itemize}[noitemsep]
-%     \item Built a combinational 8-bit CPU (from gate level) using HDL (Verilog) as a part of course CS2310
-% \end{itemize}
-
-\noindent
+\hrulefill \\ [-0.5cm]
 \projecttopic{CPU Design} \mylink{https://github.com/Snehadeep-Gayen/Computer-Organisation-and-Architecture-Lab} 
 \mylink{https://github.com/Snehadeep-Gayen/Simple_CPU_Design} 
 \hfill    \textcolor{projDescColor}{\textit{Verilog}}  \\
@@ -170,20 +155,12 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
 \end{itemize}
 
 \noindent
-\
-
-
-\noindent
 \projecttopic{Reading Project and Presentation} \mylink{https://docs.google.com/presentation/d/11JGNKZnVHHQ-aGJLIgkdXcnK5qy_xisO/edit?usp=sharing&ouid=111499804735475673896&rtpof=true&sd=true} \\
 \projectdesc{CS6122 Course Project - Prof. B. V. R. Rao} \hfill \mycal{Jan-May '23} 
 \begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
     \item Presented the paper on \href{https://doi.org/10.1007/s00453-012-9643-5}{\textit{``Smoothed Analysis of Partitioning Algorithms for Euclidean Functionals"} 
     by \textit{Bläser, M., Manthey, B. \& Rao, B.V.R.}} and discussed its applications to problems
 \end{itemize}
-
-\noindent
-\
-
 
 \noindent
 \projecttopic{Closeness Centrality Algorithm} \mylink{https://github.com/Snehadeep-Gayen/CENDY-Incremental-CC}
@@ -195,57 +172,12 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
     in a Dynamic Graph
  \end{itemize}
 
-
-% \begin{itemize}
-% \setlength\itemsep{-0.5em}
-
-
-% \item \textbf{WiFi Tomography* \big\vert \   Prof. Ayon Chakraborty} \hfill { \textit{Python}} \\
-%  \\[-1cm]
-% \begin{itemize}[noitemsep]
-%     \item Working on computational optimisation of Tomographic Imaging (using WiFi) for outdoor
-%     and indoor drone application 
-%  \end{itemize}
- 
-% \item \textbf{Hack CPU \big\vert \   Prof. C Chandra Sekhar} \  \href{https://github.com/Snehadeep-Gayen/Computer-Organisation-and-Architecture-Lab}{\includegraphics[scale=0.03]{download.png}} \hfill {\textit{Verilog} } 
-% \begin{itemize}[noitemsep,nolistsep]
-%     \item Implemented a CPU with register file and ALU with instructions to perform Arithmetic and Logical operations on both 8-bit integers and  12-bit floating-point numbers as a part of course CS2610
-%  \end{itemize}
-% \vspace{5pt}
- 
-% \item \textbf{Simple CPU \big\vert \   Prof. Ayon Chakraborty} \ \href{https://github.com/Snehadeep-Gayen/Simple_CPU_Design}{\includegraphics[scale=0.03]{download.png}} \hfill {\textit{Verilog} } 
-% \begin{itemize}[noitemsep,nolistsep]
-%     \item Built a combinational 8-bit CPU (from gate level) using HDL (Verilog) as a part of course CS2310
-%  \end{itemize}
-%  \vspace{5pt}
- 
-% \end{itemize}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \noindent
 \resheading{\subheadingfont{EXPERIENCE}} \\
-% \begin{itemize}
-% \setlength\itemsep{-0.1em}
-% \item \textbf{Member, Team Avishkar Hyperloop 6.0 \ \big\vert \   C\textcolor{red}{FI} IITM}   
-% % \  \parbox{\linewidth}{\hfill \textit{Oct '22 - Present}}
-%  \\[-0.5cm]
-% \begin{itemize}[noitemsep,nolistsep]
-%     \item Participated in the prestigious \textbf{European\\ Hyperloop Week} representing IITM \& India
-%     \item Part of the design and implementation team of the Main Control Unit and Nagivation Unit of our Pod
-%     \item Used RTOS and comm. protocols like MQTT, CAN, etc to collect and store data from over 20 sensors at \textbf{low latency}, \textbf{handling faults} appropriately.
-%  \end{itemize}
-% \item \textbf{Tutor \& Contributor \big\vert \   NPTEL }\hfill \textit{March '23 - Present} 
-% \begin{itemize}[noitemsep,nolistsep]
-%     \item Created \textbf{YouTube tutorials} under NPTEL for \\ previous year GATE CS questions especially \\ for the less privelleged applicants
-%  \end{itemize}
-
-% \end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \noindent
 \projecttopic{Team Avishkar Hyperloop, C\textcolor{red}{FI}} \hfill \mycal{Oct '22 - Present} 
-\begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
+\begin{itemize}[nolistsep, leftmargin=\myMargin]
     \item Part of Design \& Code Development Team of the Main Control Unit and Navigation Unit of our Pod. 
     \item Used RTOS and threading to collect and store data from over 20 sensors at \textbf{low latency}, \textbf{handling faults} appropriately.
     \item Used communication protocols like MQTT, CAN, etc to collect data and send data to the base station/on-Pod Storage.
@@ -259,13 +191,38 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
     \item Created \textbf{YouTube tutorials} under NPTEL for previous year GATE CS questions especially for the less privelleged applicants
 \end{itemize}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\noindent
+\resheading{\subheadingfont{EXTRACURRICULAR ACTIVITIES}}
+\begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.1em}
+\item \textbf{Sports:} Taekwondo Red Dan II Belt, Awarded Best \\ Athlete U14 at School, NSO Athlete at IITM
+\item Mentored freshmen, personally and academically, \\ under \textbf{Saathi, IIT Madras}
+\item Avid book reader and Tabla player
+\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   
 
 \columnbreak
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\noindent
+\resheading{\subheadingfont{EDUCATION}} \\
+
+\noindent
+\projecttopic{B. Tech CSE \big \vert \hspace{3pt} CGPA 9.90} \hfill \mycal{Jul '21 - Present} \\
+\projectdesc{Indian Institute of Technology Madras}  \\
+
+\noindent
+\projecttopic{HSC Class 12$^{\mathbf{th}}$ \big \vert \hspace{3pt} 98.17\%} \hfill \mycal{Apr '19 - Apr '21} \\
+\projectdesc{Pace Junior Science College, Mumbai}  \\
+
+\noindent
+\projecttopic{ICSE Class 10$^{\mathbf{th}}$ \big \vert \hspace{3pt} 98.80\%} \hfill \mycal{Apr '19} \\
+\projectdesc{Lilavatibai Podar High School, Mumbai}  \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \noindent
@@ -299,9 +256,8 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
     \item  \normalsize {1st place in Inter-School Java Competition in Mumbai}
   \end{itemize}
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 
  
 \noindent
@@ -313,24 +269,14 @@ ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\
 \item \textbf{Libraries}: TI RTOS, NumPy, PyLops, Matplotlib
   \end{itemize}
   
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\noindent
-\resheading{\subheadingfont{EXTRACURRICULAR ACTIVITIES}}
-\begin{itemize}[leftmargin=\myMargin]
-    \setlength \itemsep{-0.1em}
-\item \textbf{Sports:} Taekwondo Red Dan II Belt, Awarded Best \\ Athlete U14 at School, NSO Athlete at IITM
-\item Mentored freshmen, personally and academically, \\ under \textbf{Saathi, IIT Madras}
-\item Avid book reader and Tabla player
-\end{itemize}
 
 \noindent
 \resheading{\subheadingfont{COURSES \& LABS}}
  % \textbf{Econometrics \big\vert \   Statistics \big\vert \   Mathematical Methods \big\vert \   Microeconomics \big\vert \   Macroeconomics}\hfill {[ISI-D]}\\[-0.1cm]\\
 \begin{multicols}{2} 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
   % \item {\small Problem Solving using Computers} 
