--- a/resume.tex
+++ b/resume.tex
@@ -73,7 +73,10 @@
 \newcommand{\mylink}[1]{\href{#1}{\includegraphics[scale=0.03]{download.png}}}
 
 % New command for Calendar
-\newcommand{\mycal}[1]{\includegraphics[scale=0.02]{calendar.png} \myfont{10}{#1}}
+\newcommand{\mycal}[1]{\includegraphics[scale=0.018]{calendar.png} \myfont{10}{#1}}
+
+% New command for Location
+\newcommand{\myloc}[1]{\includegraphics[scale=0.7]{loc.png} \myfont{10}{#1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -105,107 +108,10 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \setlength{\tabcolsep}{20pt}
-% \begin{table}
-% \centering
-% \noindent
-% \resheading{\subheadingfont{EDUCATION}}\\ 
-% \vspace{5pt}
-% \begin{tabular}{lllll}
-% \toprule
-% \toprule
-% \textbf{Course}  & \textbf{CGPA/\%}  & \textbf{Institution} & \textbf{Year} \\ 
-% \toprule
-%  B. Tech CSE  & \fontsize{11pt}{12pt} \selectfont \textbf{9.90} & Indian Institute of Technology, Madras & 2021-Present  \\ 
-% HSC 12$^{th}$ & 98.17  & Pace Junior Science College Andheri, Mumbai & 2019-21  \\ 
-% ICSE 10$^{th}$ & 98.8 &  Lilavatibai Podar High School, Mumbai & 2019\\ 
-% \bottomrule
-% \bottomrule \\[-0.9cm]
-% \end{tabular}
-% \end{table}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{multicols*}{2}
-\noindent
-\resheading{\subheadingfont{PROJECTS} }\\[0.1cm]
 
-\noindent
-\projecttopic{WiFi Tomography} \textit{\myfont{9pt}{(Ongoing)}} \hfill \textcolor{projDescColor}{\textit{Python}}  \\
-\projectdesc{Project Under Prof. Ayon Chakraborty} \hfill \mycal{May'23 - Present} 
-\begin{itemize}[nolistsep, leftmargin=\myMargin]
-    \item WiFi tomography is a low-cost and easily implementable method to image the environment using WiFi signals.
-    \item Working on computational optimisation of Tomographic Reconstruction to make it suitable for outdoor
-        and indoor drone application 
-\end{itemize} 
-\vspace{5pt}
-
-\noindent
-\hrulefill \\ [-0.5cm]
-\projecttopic{CPU Design} \mylink{https://github.com/Snehadeep-Gayen/Computer-Organisation-and-Architecture-Lab} 
-\mylink{https://github.com/Snehadeep-Gayen/Simple_CPU_Design} 
-\hfill    \textcolor{projDescColor}{\textit{Verilog}}  \\
-\projectdesc{CS2610 Course Project - Prof. C. Chandra Sekhar} \hfill \mycal{Jan-May '23} \\
-\projectdesc{CS2310 Course Project - Prof. Ayon Chakraborty} \hfill \mycal{Jul-Nov '22}
-\noindent
-\begin{itemize}[nolistsep, leftmargin=\myMargin]
-    \item Implemented a CPU with register file and ALU with instructions to perform Arithmetic 
-    and Logical operations on both 8-bit integers and  12-bit floating-point numbers
-    \item Built a combinational 8-bit CPU from gate level
-\end{itemize}
-
-\noindent
-\projecttopic{Reading Project and Presentation} \mylink{https://docs.google.com/presentation/d/11JGNKZnVHHQ-aGJLIgkdXcnK5qy_xisO/edit?usp=sharing&ouid=111499804735475673896&rtpof=true&sd=true} \\
-\projectdesc{CS6122 Course Project - Prof. B. V. R. Rao} \hfill \mycal{Jan-May '23} 
-\begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
-    \item Presented the paper on \href{https://doi.org/10.1007/s00453-012-9643-5}{\textit{``Smoothed Analysis of Partitioning Algorithms for Euclidean Functionals"} 
-    by \textit{Bläser, M., Manthey, B. \& Rao, B.V.R.}} and discussed its applications to problems
-\end{itemize}
-
-\noindent
-\projecttopic{Closeness Centrality Algorithm} \mylink{https://github.com/Snehadeep-Gayen/CENDY-Incremental-CC}
- \hfill \textcolor{projDescColor}{\textit{C++}} \\
-\projectdesc{Project under Prof. Manikandan Narayanan} \hfill \mycal{May-Jun '23}
-\begin{itemize}[nolistsep, leftmargin=\myMargin]
-    \item Implemented the CENDY algorithm based on this paper \ \mylink{https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6729571&isnumber=6729471}
-    \item This on-line algorithm updates Average Path Length and Closeness Centrality of all nodes
-    in a Dynamic Graph
- \end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\noindent
-\resheading{\subheadingfont{EXPERIENCE}} \\
-\noindent
-\projecttopic{Team Avishkar Hyperloop, C\textcolor{red}{FI}} \hfill \mycal{Oct '22 - Present} 
-\begin{itemize}[nolistsep, leftmargin=\myMargin]
-    \item Part of Design \& Code Development Team of the Main Control Unit and Navigation Unit of our Pod. 
-    \item Used RTOS and threading to collect and store data from over 20 sensors at \textbf{low latency}, \textbf{handling faults} appropriately.
-    \item Used communication protocols like MQTT, CAN, etc to collect data and send data to the base station/on-Pod Storage.
-    \item Participated in prestigious \textbf{European Hyperloop Week - Scotland 2023}, 
-    among over 25 teams globally to represent the country.
-\end{itemize}
-\noindent
-\ 
-\projecttopic{Tutor \& Contributor, \textcolor{nptel}{NPTEL}} \hfill \mycal{March '23 - Present} 
-\begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
-    \item Created \textbf{YouTube tutorials} under NPTEL for previous year GATE CS questions especially for the less privelleged applicants
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\noindent
-\resheading{\subheadingfont{EXTRACURRICULAR ACTIVITIES}}
-\begin{itemize}[leftmargin=\myMargin]
-    \setlength \itemsep{-0.1em}
-\item \textbf{Sports:} Taekwondo Red Dan II Belt, Awarded Best \\ Athlete U14 at School, NSO Athlete at IITM
-\item Mentored freshmen, personally and academically, \\ under \textbf{Saathi, IIT Madras}
-\item Avid book reader and Tabla player
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  
-
-\columnbreak
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -214,31 +120,38 @@
 
 \noindent
 \projecttopic{B. Tech CSE \big \vert \hspace{3pt} CGPA 9.90} \hfill \mycal{Jul '21 - Present} \\
-\projectdesc{Indian Institute of Technology Madras}  \\
+\projectdesc{Indian Institute of Technology Madras}  \hfill \myloc{Chennai, TN}\\
 
 \noindent
-\projecttopic{HSC Class 12$^{\mathbf{th}}$ \big \vert \hspace{3pt} 98.17\%} \hfill \mycal{Apr '19 - Apr '21} \\
-\projectdesc{Pace Junior Science College, Mumbai}  \\
+\projecttopic{HSC Class 12$^{\mathbf{th}}$ \big \vert \hspace{3pt} 98.17\%} \hfill \mycal{Apr '20 - Apr '21} \\
+\projectdesc{Pace Junior Science College}  \hfill \myloc{Mumbai, MH}\\
 
 \noindent
-\projecttopic{ICSE Class 10$^{\mathbf{th}}$ \big \vert \hspace{3pt} 98.80\%} \hfill \mycal{Apr '19} \\
-\projectdesc{Lilavatibai Podar High School, Mumbai}  \\
+\projecttopic{ICSE Class 10$^{\mathbf{th}}$ \big \vert \hspace{3pt} 98.80\%} \hfill \mycal{Apr '18 - Apr '19} \\
+\projectdesc{Lilavatibai Podar High School} \hfill \myloc{Mumbai, MH}\\
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\noindent
+\resheading{\subheadingfont{EXPERIENCE}} \\ [0.1cm]
 
 \noindent
-\resheading{\subheadingfont{SCHOLASTIC ACHIEVEMENTS}}
+\hrulefill \\ [-0.5cm]
+\projecttopic{Team Avishkar Hyperloop, C\textcolor{red}{FI}} \hfill \mycal{Oct '22 - Present} 
 \begin{itemize}[leftmargin=\myMargin]
-\setlength \itemsep{-0.1em}
-\item Secured \textbf{AIR 5} in JEE Mains out of 1 million students  %\hfill {[20XX]}%
-\item Secured \textbf{AIR 161} in JEE Advanced \hfill
-\item Secured \textbf{AIR 10} in Indian Statistical Institute Exam
-\item Secured \textbf{AIR 21} in INChO and attended IChO Camp
-\item Awarded KVPY Fellowship (2021) with \textbf{AIR 338}
-\item Winner of Mimamsa '22 at IISER Pune \\ 4$^{th}$ place in Chemenigma '22 at IISC Bangalore \& \\ Won Silver Medal in Homi Bhabha Science Competition \\ (conducted in Maharashtra)
-\end{itemize} 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- 
+    \item Part of Code Development Team of the \textbf{Main Control Unit} and \textbf{Navigation Unit} of our Pod. 
+    \item Used \textbf{RTOS, threading} and communication protocols like MQTT, CAN, etc. to collect and store data from over 20 sensors at \textbf{low latency}, \textbf{handling faults} appropriately.
+    % \item Used communication protocols like MQTT, CAN, etc to collect data and send data to the base station/on-Pod Storage.
+    \item Participated in the prestigious \textbf{European Hyperloop Week - Scotland 2023}, 
+    among over 25 teams globally to represent the country.
+\end{itemize}
+\vspace{3pt}
+\noindent
+\hrulefill \\ [-0.5cm]
+\projecttopic{Tutor \& Contributor, \textcolor{nptel}{NPTEL}} \hfill \mycal{March '23 - Present}
+\begin{itemize}[leftmargin=\myMargin]
+    \item Created \textbf{YouTube tutorials} for previous years' GATE CS questions
+    \item These tutorials aim to support applicants who may have limited access to resources
+\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -252,10 +165,9 @@
 \item \textbf{AIR 3} in Shaastra CP Potpourri (Mixed-bag coding contest) \\ \small {\textit{[Shaastra is Asia's largest student-run Techfest]}} 
     \item \normalsize{ \textbf{Global Rank 9} in CodeChef Starters 96} 
     \item \normalsize{ \textbf{Global Rank 231} in Codeforces Round 881} 
-    \item \normalsize{ \textbf{Global Rank 373} in Google Farewell Round} 
+    \item \normalsize{ \textbf{Global Rank 373} in Google Farewell Round B} 
     \item  \normalsize {1st place in Inter-School Java Competition in Mumbai}
   \end{itemize}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -272,28 +184,115 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\noindent
+\resheading{\subheadingfont{EXTRACURRICULAR ACTIVITIES}}
+\begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.08em}
+\item \textbf{Sports:} Taekwondo Red Dan II Belt, Awarded Best \\ Athlete U14 at School,  School Sports Captain for 2019-20  \\
+    Awarded 13 medals in various Track \& Field events in High School, NSO Athlete at IITM
+\item Mentored freshmen, personally and academically, \\ under \textbf{Saathi, IIT Madras}
+\item Avid book reader and Tabla player
+\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  
+
+\columnbreak
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\noindent
+\resheading{\subheadingfont{SCHOLASTIC ACHIEVEMENTS}}
+\begin{itemize}[leftmargin=\myMargin]
+\setlength \itemsep{-0.1em}
+\item Secured \textbf{AIR 5} in JEE Mains out of 1 million students  %\hfill {[20XX]}%
+\item Secured \textbf{AIR 161} in JEE Advanced \hfill
+\item Secured \textbf{AIR 10} in Indian Statistical Institute Exam
+\item Secured \textbf{AIR 21} in INChO and attended Orientation Camp for International Chemistry Olympiad
+\item Awarded KVPY Fellowship '21 with \textbf{AIR 338}
+\item Winner of Mimamsa '22 at IISER Pune \\ 4$^{th}$ place in Chemenigma '22 at IISC Bangalore \& \\ Won Silver Medal in Homi Bhabha Science Competition \\ (conducted in Maharashtra)
+\end{itemize} 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    
+\noindent
+\resheading{\subheadingfont{PROJECTS} }\\[0.1cm]
+
+\noindent
+\hrulefill \\ [-0.5cm]
+\projecttopic{WiFi Tomography} \textit{\myfont{9pt}{(Ongoing)}} \hfill \textcolor{projDescColor}{\textit{Python}}  \\[0.1cm]
+\projectdesc{Project Under Prof. Ayon Chakraborty} \hfill \mycal{May'23 - Present} 
+\begin{itemize}[leftmargin=\myMargin]
+    \item WiFi tomography is a low-cost and easily implementable method to image the environment using WiFi signals.
+    \item Working on computational optimisation of Tomographic Reconstruction to make it suitable for outdoor
+        and indoor drone application 
+\end{itemize} 
+\vspace{5pt}
+
+\noindent
+\hrulefill \\ [-0.5cm]
+\projecttopic{CPU Design} \mylink{https://github.com/Snehadeep-Gayen/Computer-Organisation-and-Architecture-Lab} 
+\mylink{https://github.com/Snehadeep-Gayen/Simple_CPU_Design} 
+\hfill    \textcolor{projDescColor}{\textit{Verilog}}  \\[0.1cm]
+\projectdesc{CS2610 Course Project - Prof. C. Chandra Sekhar} \hfill \mycal{Jan-May '23} \\
+\projectdesc{CS2310 Course Project - Prof. Ayon Chakraborty} \hfill \mycal{Jul-Nov '22}
+\noindent
+\begin{itemize}[leftmargin=\myMargin]
+    \item Implemented a CPU with register file and ALU with instructions to perform Arithmetic 
+    and Logical operations on both 8-bit integers and  12-bit floating-point numbers
+    \item Built a combinational 8-bit CPU from gate level
+\end{itemize}
+\vspace{5pt}
+
+\noindent
+\hrulefill \\ [-0.5cm]
+\projecttopic{Reading Project and Presentation} \mylink{https://docs.google.com/presentation/d/11JGNKZnVHHQ-aGJLIgkdXcnK5qy_xisO/edit?usp=sharing&ouid=111499804735475673896&rtpof=true&sd=true} \\ [0.1cm]
+\projectdesc{CS6122 Course Project - Prof. B. V. R. Rao} \hfill \mycal{Jan-May '23} 
+\begin{itemize}[leftmargin=\myMargin]
+    \item Presented the paper on \href{https://doi.org/10.1007/s00453-012-9643-5}{\textit{``Smoothed Analysis of Partitioning Algorithms for Euclidean Functionals"} 
+    by \textit{Bläser, M., Manthey, B. \& Rao, B.V.R.}} and discussed its applications to problems
+\end{itemize}
+\vspace{5pt}
+
+\noindent
+\hrulefill \\ [-0.5cm]
+\projecttopic{Closeness Centrality Algorithm} \mylink{https://github.com/Snehadeep-Gayen/CENDY-Incremental-CC}
+ \hfill \textcolor{projDescColor}{\textit{C++}} \\ [0.1cm]
+\projectdesc{Project under Prof. Manikandan Narayanan} \hfill \mycal{May-Jun '23}
+\begin{itemize}[leftmargin=\myMargin]
+    \item Implemented the CENDY algorithm based on this paper \ \mylink{https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6729571&isnumber=6729471}
+    \item This on-line algorithm updates Average Path Length and Closeness Centrality of all nodes
+    in a Dynamic Graph
+ \end{itemize}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 \noindent
 \resheading{\subheadingfont{COURSES \& LABS}}
  % \textbf{Econometrics \big\vert \   Statistics \big\vert \   Mathematical Methods \big\vert \   Microeconomics \big\vert \   Macroeconomics}\hfill {[ISI-D]}\\[-0.1cm]\\
 \begin{multicols}{2} 
 
-\begin{itemize}[noitemsep, nolistsep, leftmargin=\myMargin]
+\begin{itemize}[ leftmargin=\myMargin]
+    \setlength \itemsep{-0.2em}
   % \item {\small Problem Solving using Computers} 
   \item { Basic Electrical Engg} 
   \item { Computer Systems Design} 
   \item {Programming and Data Structures}
   \item { Computer Organisation and Architecture} 
-  \item { Design \& Analysis of Algorithms} 
+  \item { Design \& Analysis of  \\ Algorithms} 
   \item { Theory of Computation} 
-  \item { Probabilistic, Smoothed Analysis of Algorithms} 
+  \item { Probabilistic, Smoothed Analysis of Algorithms (PG)} 
   \item { Object Oriented Programming} 
   \item { Discrete Maths} 
-  \item { Basic Grpah Theory} 
-  \item { Probability, Statistics\& Stochastic Processes} 
+  \item { Basic Graph Theory} 
+  \item { Probability, Statistics \& Stochastic Processes} 
   \item { Series and Matrices} 
   \item { Multivariable Calculus} 
-  \item { Ordinary Differential Eqns}  
+  \item { Ordinary Differential Equations (PG)}  
   \item { Principles of Economics} 
   \item { Intro to Game Theory}   
   \item { Compiler Design *} 
