--- a/resume.tex
+++ b/resume.tex
@@ -188,9 +188,18 @@
 \resheading{\subheadingfont{EXTRACURRICULAR ACTIVITIES}}
 \begin{itemize}[leftmargin=\myMargin]
     \setlength \itemsep{-0.08em}
-\item \textbf{Sports:} Taekwondo Red Dan II Belt, Awarded Best \\ Athlete U14 at School,  School Sports Captain for 2019-20  \\
-    Awarded 13 medals in various Track \& Field events in High School, NSO Athlete at IITM
-\item Mentored freshmen, personally and academically, \\ under \textbf{Saathi, IIT Madras}
+\item \textbf{Sports:} \vspace{-0.35cm}
+    \begin{multicols}{2}
+        \begin{itemize}[noitemsep,nolistsep,leftmargin=\myMargin]
+        \item Taekwondo Red-II Belt
+        \item NSO Athlete at IITM
+        \item School Sports Captain 2018-2019
+        % \item Awarded 13 medals in various Track \& Field events
+        \item Awarded Best Athlete U14 and 13 medals in Track \& Field events
+      \end{itemize}
+    \end{multicols}
+    \vspace{-9pt}
+\item Mentored freshmen, personally and academically, under \textbf{Saathi, IIT Madras}
 \item Avid book reader and Tabla player
 \end{itemize}
 
@@ -204,7 +213,7 @@
 \noindent
 \resheading{\subheadingfont{SCHOLASTIC ACHIEVEMENTS}}
 \begin{itemize}[leftmargin=\myMargin]
-\setlength \itemsep{-0.1em}
+\setlength \itemsep{-0.2em}
 \item Secured \textbf{AIR 5} in JEE Mains out of 1 million students  %\hfill {[20XX]}%
 \item Secured \textbf{AIR 161} in JEE Advanced \hfill
 \item Secured \textbf{AIR 10} in Indian Statistical Institute Exam
@@ -250,7 +259,7 @@
 \projectdesc{CS6122 Course Project - Prof. B. V. R. Rao} \hfill \mycal{Jan-May '23} 
 \begin{itemize}[leftmargin=\myMargin]
     \item Presented the paper on \href{https://doi.org/10.1007/s00453-012-9643-5}{\textit{``Smoothed Analysis of Partitioning Algorithms for Euclidean Functionals"} 
-    by \textit{Bläser, M., Manthey, B. \& Rao, B.V.R.}} and discussed its applications to problems
+    by \textit{Bläser, M., Manthey, B. \& Rao, B.V.R.}} and discussed its applications
 \end{itemize}
 \vspace{5pt}
 
