Removed extra spaces from everywhere

--- a/resume.tex
+++ b/resume.tex
@@ -113,19 +113,26 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \noindent
-\resheading{\subheadingfont{EDUCATION}} \\
+\resheading{\subheadingfont{EDUCATION}} 
+\vspace{-0.1cm}
+\\
+\noindent
+\projecttopic{B. Tech CSE \big \vert \hspace{3pt} CGPA 9.94} \hfill \mycal{Jul '21 - Present} 
+\vspace{-0.1cm} \\
+\projectdesc{Indian Institute of Technology Madras}  \hfill \myloc{Chennai, TN}
+\vspace{-0.2cm} \\
 
 \noindent
-\projecttopic{B. Tech CSE \big \vert \hspace{3pt} CGPA 9.94} \hfill \mycal{Jul '21 - Present} \\
-\projectdesc{Indian Institute of Technology Madras}  \hfill \myloc{Chennai, TN}\\
+\projecttopic{HSC Class 12$^{\mathbf{th}}$ \big \vert \hspace{3pt} 98.17\%} \hfill \mycal{Apr '20 - Apr '21}
+\vspace{-0.1cm} \\
+\projectdesc{Pace Junior Science College}  \hfill \myloc{Mumbai, MH}
+\vspace{-0.2cm} \\
 
 \noindent
-\projecttopic{HSC Class 12$^{\mathbf{th}}$ \big \vert \hspace{3pt} 98.17\%} \hfill \mycal{Apr '20 - Apr '21} \\
-\projectdesc{Pace Junior Science College}  \hfill \myloc{Mumbai, MH}\\
-
-\noindent
-\projecttopic{ICSE Class 10$^{\mathbf{th}}$ \big \vert \hspace{3pt} 98.80\%} \hfill \mycal{Apr '18 - Apr '19} \\
-\projectdesc{Lilavatibai Podar High School} \hfill \myloc{Mumbai, MH}\\
+\projecttopic{ICSE Class 10$^{\mathbf{th}}$ \big \vert \hspace{3pt} 98.80\%} \hfill \mycal{Apr '18 - Apr '19}
+\vspace{-0.1cm} \\
+\projectdesc{Lilavatibai Podar High School} \hfill \myloc{Mumbai, MH}
+\vspace{-0.2cm} \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \noindent
@@ -163,7 +170,7 @@
     \setlength \itemsep{-0.1em}
     \item Created an end-to-end IoT pipeline for Human Activity Recognition using WiFi CSI (Channel State Information) Sensing
     \item Analysed the effect of compression on CSI data and its tradeoffs on the Network Bandwidth, Energy Consumption \& Sensing Accuracy.
-    \item Submitted part of the work in AIoT workshop organised in Greece. 
+    \item Submitted part of the work in AIoT workshop organised in Athens, Greece. 
 \end{itemize}
 \noindent
 \projecttopic{Undergraduate Research - Custom Protocol Headers with P4 \\ for Network Application Support} \hfill \mycal{Ongoing}
@@ -223,10 +230,10 @@
 \begin{itemize}[leftmargin=\myMargin]
 \setlength \itemsep{-0.1em}
 \item Awarded Sri V Ramachandran Prize for \textbf{Highest CGPA} in Semesters 3 \& 4 of B.Tech and Dual Degree in Computer Science 
-\item Secured \textbf{AIR 5} in JEE Mains out of 1 million students  %\hfill {[20XX]}%
-\item Secured \textbf{AIR 161} in JEE Advanced \hfill
+\item Secured \textbf{AIR 5} in JEE Mains '19 out of 1 million students  %\hfill {[20XX]}%
+\item Secured \textbf{AIR 161} in JEE Advanced '19\hfill
 \item Secured \textbf{AIR 10} in Indian Statistical Institute Exam
-\item Secured \textbf{AIR 21} in INChO and attended Orientation Camp for International Chemistry Olympiad
+\item Secured \textbf{AIR 21} in INChO and attended Orientation Camp for \\ International Chemistry Olympiad
 \item Awarded KVPY Fellowship '21 with \textbf{AIR 338}
 \item Winner of Mimamsa '22 at IISER Pune $\vert$ 4$^{th}$ place in Chemenigma '22 at IISC Bangalore $\vert$ Won Silver Medal in Homi Bhabha Science Competition (conducted in Maharashtra)
 \end{itemize} 
@@ -251,8 +258,6 @@
 \noindent
 \resheading{\subheadingfont{PROJECTS} }\\[0.1cm]
 
-
-
 \noindent
 \hrulefill \\ [-0.5cm]
 \projecttopic{Java Compiler Design }
@@ -260,33 +265,23 @@
 \hfill    \textcolor{projDescColor}{\textit{Java, C}}  \\[0.1cm]
 \projectdesc{CS3300 Course Project - Prof. Krishna Nandivada} \hfill \mycal{Jan-May '23} \\
 \noindent
+\vspace{-0.5cm}
 \begin{itemize}[leftmargin=\myMargin]
-    \item Implemented a fully functional compiler for a subset of Java with Lexical Analyser, Parsing, Type Checking, IR Generation, Register Allocation, Stack Handling, and MIPS code generation
+    \item Implemented a MIPS compiler for a subset of Java with Lexical Analyser, Parsing, Type Checking, IR Generation, Register Allocation, Stack Handling, and MIPS code generation
 \end{itemize}
 \vspace{5pt}
 
-
 \noindent
 \hrulefill \\ [-0.5cm]
-\projecttopic{MMU with LRU replacement}
+\projecttopic{OS Scheduler and Memory Management Unit Design}
 \mylink{insert link here}
 \hfill    \textcolor{projDescColor}{\textit{Java}}  \\[0.1cm]
 \projectdesc{CS3500 Course Project - Prof. Prashant LA} \hfill \mycal{Jan-May '23} \\
 \noindent
+\vspace{-0.5cm}
 \begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.1em}
     \item Implemented a Memory Management Unit with LRU Page replacement Policy
-\end{itemize}
-\vspace{5pt}
-
-
-\noindent
-\hrulefill \\ [-0.5cm]
-\mylink{insert link here}
-\projecttopic{Multi-Level Feedback Queue Scheduler}
-\hfill    \textcolor{projDescColor}{\textit{Java}}  \\[0.1cm]
-\projectdesc{CS3500 Course Project - Prof. Prashant LA} \hfill \mycal{Jan-May '23} \\
-\noindent
-\begin{itemize}[leftmargin=\myMargin]
     \item Implemented a Multi-Level Feedback Queue Scheduler for processes
 \end{itemize}
 \vspace{5pt}
@@ -299,10 +294,12 @@
 \projectdesc{CS2610 Course Project - Prof. C. Chandra Sekhar} \hfill \mycal{Jan-May '23} \\
 \projectdesc{CS2310 Course Project - Prof. Ayon Chakraborty} \hfill \mycal{Jul-Nov '22}
 \noindent
+\vspace{-0.2cm}
 \begin{itemize}[leftmargin=\myMargin]
+    \setlength \itemsep{-0.1em}
     \item Implemented a CPU with \textbf{Register file} and \textbf{ALU} with instructions to perform Arithmetic 
     and Logical operations on both 8-bit integers and  12-bit floating-point numbers
-    \item Built a combinational 8-bit CPU from gate level
+    \item Built a combinational 8-bit CPU with structural gate-level Verilog 
 \end{itemize}
 \vspace{5pt}
 
@@ -311,11 +308,12 @@
 \projecttopic{Closeness Centrality Algorithm} \mylink{https://github.com/Snehadeep-Gayen/CENDY-Incremental-CC}
  \hfill \textcolor{projDescColor}{\textit{C++}} \\ [0.1cm]
 \projectdesc{Project under Prof. Manikandan Narayanan} \hfill \mycal{May-Jun '23}
+\vspace{-0.2cm}
 \begin{itemize}[leftmargin=\myMargin]
-    \item Implemented the CENDY algorithm based on this paper \ \mylink{https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6729571&isnumber=6729471}
-    \item This on-line algorithm updates Average Path Length and Closeness Centrality of all nodes
-    in a Dynamic Graph
+    \item Implemented the CENDY algorithm, an on-line algorithm for updating Average Path Length and Closeness Centrality in a Dynamic Graph, based on this paper. \ \mylink{https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6729571&isnumber=6729471}
  \end{itemize}
+\vspace{-0.2cm}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -325,33 +323,41 @@
 
 \noindent
 \resheading{\subheadingfont{COURSES \& LABS}}
- % \textbf{Econometrics \big\vert \   Statistics \big\vert \   Mathematical Methods \big\vert \   Microeconomics \big\vert \   Macroeconomics}\hfill {[ISI-D]}\\[-0.1cm]\\
+\small
+\textbf{Computer Science}
+\vspace{-0.3cm}
 \begin{multicols}{2} 
-
+    \scriptsize
 \begin{itemize}[ leftmargin=\myMargin]
     \setlength \itemsep{-0.2em}
-  % \item {\small Problem Solving using Computers} 
-  \item { Basic Electrical Engg} 
-  \item { Computer Systems Design} 
-  \item {Programming and Data Structures}
-  \item { Computer Organisation and Architecture} 
-  \item { Design \& Analysis of  \\ Algorithms} 
-  \item { Theory of Computation} 
-  \item { Probabilistic, Smoothed Analysis of Algorithms (PG)} 
-  \item { Object Oriented Programming} 
-  \item { Discrete Maths} 
-  \item { Basic Graph Theory} 
-  \item { Probability, Statistics \& Stochastic Processes} 
-  \item { Series and Matrices} 
-  \item { Multivariable Calculus} 
-  \item { Ordinary Differential Equations (PG)}  
-  \item { Principles of Economics} 
-  \item { Intro to Game Theory}   
-  \item { Compiler Design *} 
-  \item { Operating System *}
+    \item Hi
+    \columnbreak
+    \item Hi
 \end{itemize}
-\hfill  {* ~ Ongoing}
-
+\end{multicols}
+\noindent
+\textbf{Mathematics}
+\vspace{-0.3cm}
+\begin{multicols}{2} 
+    \scriptsize
+\begin{itemize}[ leftmargin=\myMargin]
+    \setlength \itemsep{-0.2em}
+    \item Hi
+    \columnbreak
+    \item Hi
+\end{itemize}
+\end{multicols}
+\noindent
+\textbf{Economics}
+\vspace{-0.3cm}
+\begin{multicols}{2} 
+    \scriptsize
+\begin{itemize}[ leftmargin=\myMargin]
+    \setlength \itemsep{-0.2em}
+    \item Hi
+    \columnbreak
+    \item Hi
+\end{itemize}
 \end{multicols}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
